加上了平行计算

--- a/notebooks/QCQP_parallel_test.ipynb
+++ b/notebooks/QCQP_parallel_test.ipynb
@@ -10,6 +10,10 @@
    "source": [
     "import sys, os\n",
     "import time\n",
+    "from pathos.multiprocessing import ProcessingPool as Pool\n",
+    "from random import shuffle\n",
+    "from typing import List\n",
+    "\n",
     "path_current = '/home/ubuntu-h/PycharmProjects/scientificProject'\n",
     "path_ = os.getcwd()\n",
     "if path_current not in sys.path:\n",
@@ -20,7 +24,8 @@
     "from PPOPT_main.PPOPT_main.src.ppopt.mpQCQP_program import MPQCQP_Program\n",
     "from PPOPT_main.PPOPT_main.src.ppopt.mp_solvers.solver_utils import generate_children_sets, CombinationTester\n",
     "from PPOPT_main.PPOPT_main.src.ppopt.solution import Solution\n",
-    "from PPOPT_main.PPOPT_main.src.ppopt.utils.mpqp_utils import gen_cr_from_active_set"
+    "from PPOPT_main.PPOPT_main.src.ppopt.utils.mpqp_utils import gen_cr_from_active_set\n",
+    "from PPOPT_main.PPOPT_main.src.ppopt.utils.general_utils import num_cpu_cores"
    ]
   },
   {
@@ -110,18 +115,7 @@
     "# https://www.sciencedirect.com/science/article/pii/S0005109811003190\n",
     "# solve the MPQCQP, based on mpqp_combinational in PPOPT_main\n",
     "\n",
-    "program = my_QCQP\n",
-    "murder_list = CombinationTester()\n",
-    "to_check = list()\n",
-    "\n",
-    "solution = Solution(program, [])\n",
-    "\n",
-    "max_depth = max(program.num_x(), program.num_t()) - len(program.equality_indices)\n",
-    "# breath first to optimize the elimination\n",
-    "\n",
-    "root_node = generate_children_sets(program.equality_indices, program.num_constraints(), murder_list)\n",
-    "\n",
-    "to_check.extend(root_node)"
+    "program = my_QCQP\n"
    ],
    "metadata": {
     "collapsed": false
@@ -133,7 +127,7 @@
    "outputs": [],
    "source": [
     "# 现在是第一层，一共20个不等式约束， 每个不等式约束为一个根节点\n",
-    "len(root_node)"
+    "# len(root_node)"
    ],
    "metadata": {
     "collapsed": false
@@ -144,7 +138,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "max_depth   # 这个最大深度的公式和excel"
+    "# max_depth   # 这个最大深度的公式和excel"
    ],
    "metadata": {
     "collapsed": false
@@ -155,7 +149,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "\n",
     "def check_child_feasibility(program: MPQCQP_Program, set_list: List[List[int]], combination_checker: CombinationTester) -> List[List[int]]:\n",
     "    \"\"\"\n",
     "    Checks the feasibility of a list of active set combinations, if infeasible add to the combination checker and returns all feasible active set combinations\n",
@@ -174,41 +168,128 @@
     "\n",
     "    return output\n",
     "\n",
+    "\n",
+    "\n",
+    "def full_process(program: MPQCQP_Program, active_set: List[int], murder_list, gen_children):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    This is the fundamental building block of the parallel combinatorial algorithm, here we branch off of a known feasible active set combination\\\\\n",
+    "    and then\n",
+    "\n",
+    "\n",
+    "    :param program: A multiparametric program\n",
+    "    :param active_set: the active set combination that we are expanding on\n",
+    "    :param murder_list: the list containing all previously found\n",
+    "    :param gen_children: A boolean flag, that determines if we should generate the children subsets\n",
+    "    :return: a list of the following form [Optional[CriticalRegion], pruned active set combination,Possibly Feasible Active set combinations]\n",
+    "    \"\"\"\n",
+    "    t_set = (*active_set,)\n",
+    "\n",
+    "    return_list = [None, set(), list()]\n",
+    "\n",
+    "    is_feasible_ = program.check_feasibility(active_set)\n",
+    "\n",
+    "    if not is_feasible_:\n",
+    "        return_list[1].add(t_set)\n",
+    "        return return_list\n",
+    "\n",
+    "    is_optimal_ = program.check_optimality(active_set)  # is_optimal(program, equality_indices)\n",
+    "\n",
+    "    if not is_optimal_:\n",
+    "        if gen_children:\n",
+    "            return_list[2] = generate_children_sets(active_set, program.num_constraints(), murder_list)\n",
+    "        return return_list\n",
+    "\n",
+    "    sol_local = is_optimal_\n",
+    "    return_list[0] = sol_local\n",
+    "\n",
+    "    if return_list[0] is None:    # TODO 即使满足最优性，也会出现cr是None的情况，后期要处理。return_list[0]本来是CR，被改了\n",
+    "        return_list[1].add(t_set)\n",
+    "        return return_list\n",
+    "\n",
+    "    if gen_children:\n",
+    "        return_list[2] = generate_children_sets(active_set, program.num_constraints(), murder_list)\n",
+    "\n",
+    "    return return_list\n",
+    "\n",
+    "\n",
     "save = []\n",
-    "start_time = time.time()\n",
+    "start = time.time()\n",
+    "\n",
+    "num_cores = num_cpu_cores()\n",
+    "\n",
+    "print(f'Spawned threads across {num_cores}')\n",
+    "\n",
+    "pool = Pool(num_cores)\n",
+    "\n",
+    "murder_list = CombinationTester()\n",
+    "to_check = list()\n",
+    "\n",
+    "solution = Solution(program, [])\n",
+    "\n",
+    "max_depth = max(program.num_x(), program.num_t()) - len(program.equality_indices)\n",
+    "# breath first to optimize the elimination\n",
+    "\n",
+    "root_node = generate_children_sets(program.equality_indices, program.num_constraints(), murder_list)\n",
+    "\n",
+    "to_check.extend(root_node)\n",
+    "\n",
     "for i in range(max_depth):\n",
     "# if there are no other active sets to check break out of loop\n",
     "# print(len(to_check))\n",
+    "    print(f'Time at depth test {i + 1}, {time.time() - start}')\n",
+    "    print(f'Number of active sets to be considered is {len(to_check)}')\n",
     "\n",
-    "    future_sets = list()\n",
-    "    # creates the list of feasible active sets\n",
-    "    feasible_sets = check_child_feasibility(program, to_check, murder_list)\n",
-    "    for child_set in feasible_sets:\n",
+    "    depth_time = time.time()\n",
     "\n",
-    "        # soln = check_optimality(program, equality_indices=child_set)\n",
-    "        # The active set is optimal try to build a critical region\n",
+    "    gen_children = i + 1 != max_depth\n",
     "\n",
-    "        # print(f\"Child set: {child_set}\")\n",
-    "        # if soln is not None:\n",
-    "        print('--'*50)\n",
-    "        sol =  program.check_optimality(child_set)\n",
-    "        if sol is not None:\n",
-    "            critical_region = 1\n",
-    "            save.append(sol)\n",
-    "            print(child_set)\n",
-    "            # critical_region = gen_cr_from_active_set(program, child_set)  #TODO CR 是否是由 inactive set 组成?\n",
-    "            # Check the dimensions of the critical region\n",
-    "            if critical_region is not None:\n",
-    "                solution.add_region(critical_region)\n",
+    "    f = lambda x: full_process(program, x, murder_list, gen_children)\n",
     "\n",
-    "        # propagate sets\n",
+    "    future_list = list()\n",
     "\n",
-    "        if i + 1 != max_depth:\n",
-    "            future_sets.extend(generate_children_sets(child_set, program.num_constraints(), murder_list))\n",
+    "    shuffle(to_check)\n",
     "\n",
-    "    to_check = future_sets\n",
+    "    outputs = pool.map(f, to_check)\n",
+    "\n",
+    "    print(f'Time to run all tasks in parallel {time.time() - depth_time}')\n",
+    "    depth_time = time.time()\n",
+    "\n",
+    "    if i + 1 == max_depth:  # 如果达到最大深度，将所有的CR加入到solution中\n",
+    "        for output in outputs:\n",
+    "            if output[0] is not None:\n",
+    "                save.append(output[0]) # 已经将CR改成sol_local了，所以放到save中\n",
+    "                # solution.add_region(output[0])\n",
+    "        break\n",
+    "\n",
+    "    for output in outputs:\n",
+    "        murder_list.add_combos(output[1])\n",
+    "        future_list.extend(output[2])\n",
+    "        if output[0] is not None:\n",
+    "            save.append(output[0]) # 已经将CR改成sol_local了，所以放到save中\n",
+    "            # solution.add_region(output[0])\n",
+    "\n",
+    "    print(f'Time to process all depth outputs {time.time() - depth_time}')\n",
+    "\n",
+    "    to_check = future_list\n",
+    "\n",
+    "    # If there are not more active sets to check we are done\n",
+    "    if len(to_check) == 0:\n",
+    "        break\n",
+    "\n",
+    "# we never actually tested the program base active set\n",
+    "if program.check_feasibility(program.equality_indices):\n",
+    "    sol_ = program.check_optimality(program.equality_indices)\n",
+    "    if sol_:\n",
+    "        save.append(sol_) # 已经将CR改成sol_了，所以放到save中\n",
+    "        # region = gen_cr_from_active_set(program, program.equality_indices)\n",
+    "        # if region is not None:\n",
+    "        #     solution.add_region(region)\n",
+    "\n",
+    "pool.clear()\n",
+    "\n",
     "end_time = time.time()\n",
-    "print(\"耗时: {:.2f}秒\".format(end_time - start_time))\n",
+    "print(\"耗时: {:.2f}秒\".format(end_time - start))\n",
     "\n",
     "print('--'*60)\n",
     "\n",
