添加了3-bus文件，跑通了

--- a/notebooks/auto_modeling_3bus.ipynb
+++ b/notebooks/auto_modeling_3bus.ipynb
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "outputs": [
     {
      "name": "stdout",
@@ -820,7 +820,7 @@
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 12 rows, 22 columns and 44 nonzeros\n",
-      "Model fingerprint: 0xf96abefb\n",
+      "Model fingerprint: 0x4a87b7bb\n",
       "Model has 10 quadratic constraints\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 7e+02]\n",
@@ -848,51 +848,45 @@
       "\n",
       "     0     0    0.00000    0   14          -    0.00000      -     -    0s\n",
       "     0     0    0.00000    0   16          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   14          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   14          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   12          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   11          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   11          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   11          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   11          -    0.00000      -     -    0s\n",
-      "     0     0    0.00000    0   11          -    0.00000      -     -    0s\n",
-      "     0     2    0.00000    0   11          -    0.00000      -     -    0s\n",
-      "*  782   606              36      32.6815244    0.00000   100%   4.7    0s\n",
-      "H  865   445                      32.1889666    0.00000   100%   4.6    0s\n",
-      "* 1323   413              42      32.1889654    0.00000   100%   4.8    0s\n",
-      "* 2159   288              50      32.1889653    0.00000   100%   4.8    0s\n",
-      "* 2517   288              49      32.1889651    0.00000   100%   4.7    0s\n",
-      "* 2560   398              54      32.1889647    0.00000   100%   4.7    0s\n",
-      "* 3005   398              43      32.1889646    0.00000   100%   4.8    0s\n",
-      "* 3949   580              47      32.1889646    0.00000   100%   4.8    0s\n",
-      "* 4745   858              50      32.1889642    0.00000   100%   4.9    0s\n",
-      "* 6065  1131              65      32.1889640    0.00000   100%   4.9    0s\n",
-      "* 7210  1719              57      32.1889638    0.00000   100%   4.9    0s\n",
-      "*10787  2574              78      32.1889634   12.46446  61.3%   5.0    0s\n",
-      "*30130  5553              70      32.1889629   27.69532  14.0%   4.8    1s\n",
-      "*34226  6054              63      32.1889625   28.74665  10.7%   4.8    1s\n",
-      "*65339 10311              59      32.1889625   31.33795  2.64%   4.5    2s\n",
-      " 116016 17625     cutoff   55        32.18896   32.00287  0.58%   4.1    5s\n",
-      "*135278 20262              72      32.1889618   32.07810  0.34%   4.0    5s\n",
-      "*148690 22377              74      32.1889616   32.10868  0.25%   3.9    6s\n",
-      "*175308 26799              75      32.1889615   32.14600  0.13%   3.8    7s\n",
-      "*223699 35417              71      32.1889615   32.17218  0.05%   3.6    8s\n",
-      "*232596 37032              73      32.1889614   32.17430  0.05%   3.5    9s\n",
-      " 257308 41750   32.18895   53    5   32.18896   32.17908  0.03%   3.4   10s\n",
-      "*265175 42975              71      32.1889613   32.18007  0.03%   3.4   10s\n",
+      "     0     0    0.00000    0   13          -    0.00000      -     -    0s\n",
+      "     0     0    0.00000    0    9          -    0.00000      -     -    0s\n",
+      "     0     0    0.00000    0    9          -    0.00000      -     -    0s\n",
+      "     0     0    0.00000    0    9          -    0.00000      -     -    0s\n",
+      "     0     0    0.00000    0    9          -    0.00000      -     -    0s\n",
+      "     0     0    0.00000    0    9          -    0.00000      -     -    0s\n",
+      "     0     2    0.00000    0    9          -    0.00000      -     -    0s\n",
+      "H  745   423                      94.9074384    0.00000   100%   4.8    0s\n",
+      "*12042  2156              57      94.9074362   79.31545  16.4%   4.9    0s\n",
+      "*12049  2156              60      94.9074357   79.31545  16.4%   4.9    0s\n",
+      "*12052  2156              59      94.9074352   79.31545  16.4%   4.9    0s\n",
+      "*12378  2156              54      94.9074288   79.35967  16.4%   4.9    0s\n",
+      "*50404  8210              62      94.9074288   93.74203  1.23%   4.4    3s\n",
+      "*56762  9443              57      94.9074284   94.01745  0.94%   4.3    3s\n",
+      "*56772  9443              59      94.9074282   94.01745  0.94%   4.3    3s\n",
+      "*66740 10817              61      94.9074274   94.32378  0.61%   4.3    4s\n",
+      " 78286 13035   94.88905   45   16   94.90743   94.52868  0.40%   4.3    5s\n",
+      "*93704 15739              61      94.9074273   94.66580  0.25%   4.2    6s\n",
+      "*106068 18206              69      94.9074262   94.73391  0.18%   4.2    6s\n",
+      " 130985 23290   94.87168   53    0   94.90743   94.81381  0.10%   4.1   10s\n",
+      " 185646 22453   94.90739   67    5   94.90743   94.81381  0.10%   4.0   15s\n",
+      " 241640 31335   94.90003   68   14   94.90743   94.81381  0.10%   3.9   20s\n",
+      " 290601 45229     cutoff   66        94.90743   94.84750  0.06%   3.8   25s\n",
+      " 347592 62378     cutoff   71        94.90743   94.88052  0.03%   3.6   30s\n",
+      "*355622 64051              82      94.9074259   94.88328  0.03%   3.6   30s\n",
+      " 388997 67434 infeasible   70        94.90743   94.89650  0.01%   3.6   35s\n",
       "\n",
       "Cutting planes:\n",
-      "  RLT: 10\n",
+      "  RLT: 4\n",
       "\n",
-      "Explored 353033 nodes (1086208 simplex iterations) in 13.10 seconds (6.42 work units)\n",
+      "Explored 396751 nodes (1409113 simplex iterations) in 36.09 seconds (26.58 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 10: 32.189 32.189 32.189 ... 32.189\n",
+      "Solution count 10: 94.9074 94.9074 94.9074 ... 94.9074\n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Warning: max constraint violation (1.7502e-06) exceeds tolerance\n",
-      "Best objective 3.218896128560e+01, best bound 3.218575852899e+01, gap 0.0099%\n",
-      "Pg: [32.18896129  0.        ]; Qg: [0. 0.]; opt obj: 32.188961285600755\n"
+      "Warning: max constraint violation (1.8673e-06) exceeds tolerance\n",
+      "Best objective 9.490742592092e+01, best bound 9.489803860998e+01, gap 0.0099%\n",
+      "Pg: [94.90742592  0.        ]; Qg: [0.         5.26424601]; opt obj: 94.90742592092384\n"
      ]
     }
    ],
@@ -901,87 +895,94 @@
     "# obtain the complex load\n",
     "Pd = bus[:, PD]\n",
     "Qd = bus[:, QD]\n",
-    "slack_v = net.ext_grid['vm_pu']\n",
-    "\n",
-    "lb_update = -1e4\n",
-    "\n",
-    "# obtain the range of voltage; the range is from the setting\n",
-    "V_range = 0.1\n",
-    "V_ll,V_uu = 1.0-V_range, 1.0+V_range\n",
-    "\n",
-    "# obtain the power range\n",
-    "# Pg_lower, Pg_upper = ll[vv[\"i1\"][\"Pg\"]:vv[\"iN\"][\"Pg\"]], uu[vv[\"i1\"][\"Pg\"]:vv[\"iN\"][\"Pg\"]]*baseMVA\n",
-    "# Qg_lower, Qg_upper = ll[vv[\"i1\"][\"Qg\"]:vv[\"iN\"][\"Qg\"]], uu[vv[\"i1\"][\"Qg\"]:vv[\"iN\"][\"Qg\"]]*baseMVA\n",
-    "\n",
-    "# the dimension of the OPF\n",
-    "nb = bus.shape[0]          ## number of buses\n",
-    "nl = branch.shape[0]       ## number of branches\n",
-    "\n",
-    "ineq_idx = 0\n",
-    "\n",
-    "# create the model; set the model type: NonConvex.\n",
-    "model = gp.Model(\"PowerGeneration\");model.setParam('NonConvex', 2)\n",
-    "\n",
-    "# creat variables for the model; the numbers in the following codes should be replaced by parameters\n",
-    "V_re = model.addMVar(3, lb=[-1.05,-1.05,-1.05], ub=[1.05,1.05,1.05], vtype=GRB.CONTINUOUS, name='V real')\n",
-    "V_im = model.addMVar(3, lb=[-1.05,-1.05,-1.05],ub=[1.05,1.05,1.05], vtype=GRB.CONTINUOUS, name='V imag')\n",
-    "Pg = model.addMVar(2, lb=0, ub=[105,105], vtype=GRB.CONTINUOUS, name='Pg')\n",
-    "Qg = model.addMVar(2, lb=[0,0], ub=[105,105], vtype=GRB.CONTINUOUS, name='Qg')\n",
-    "temp1 = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Temp 1')\n",
-    "temp2 = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Temp 2')\n",
-    "Pg_net = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Pg net')  # the number of buses, too\n",
-    "Qg_net = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Qg net')\n",
-    "\n",
-    "# Line_temp_1 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 1')    # the shape should be line number\n",
-    "# Line_temp_2 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 2')    # the shape should be line number\n",
-    "# Line_temp_3 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 3')    # the shape should be line number\n",
-    "# Line_temp_4 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 4')    # the shape should be line number\n",
-    "\n",
-    "# the prameters of branches\n",
-    "G = np.real(Ybus)\n",
-    "B = np.imag(Ybus)\n",
+    "# slack_v = net.ext_grid['vm_pu']\n",
     "\n",
     "\n",
-    "# Constraints; insert the formulas\n",
-    "Temp_c1 = model.addConstr(G@V_re - B@V_im == temp1, 'Temp Constr 1')\n",
-    "Temp_c2 = model.addConstr(G @ V_im + B @ V_re == temp2, 'Temp Constr 2')\n",
-    "Pg_net_c = model.addConstr(Cg @ Pg - Pd == Pg_net, 'Pg net Constr')\n",
-    "Qg_net_c = model.addConstr(Cg @ Qg - Qd == Qg_net, 'Qg net Constr')\n",
-    "# print(f'Pd:{Pd}\\n Qd:{Qd}')\n",
-    "CVL_CPL = model.addConstrs((V_re[i] * temp1[i] *baseMVA+ V_im[i] * temp2[i]*baseMVA == Pg_net[i]  for i in range(nb)), 'Cvl P')  # break into different parts\n",
-    "CVL_CPL_Q = model.addConstrs((V_im[i] * temp1[i] *baseMVA - V_re[i] * temp2[i]*baseMVA == Qg_net[i] for i in range(nb)), 'Cvl Q')\n",
+    "def optimize_OPF(p_load):\n",
+    "    Pd = p_load\n",
+    "    Qd = 0\n",
     "\n",
-    "# the constraints of voltages on all buses; set the constraint for slack bus, then give the upper and lower constraints for other buses\n",
+    "    lb_update = -1e4\n",
     "\n",
-    "# the upper&lower constraints for buses except for the slack bus\n",
-    "V_upper = model.addConstrs((V_re[i]**2 + V_im[i]**2 <= V_uu**2 for i in range(1,nb-ineq_idx)), 'V upper bound')  # 对 range 起始值的处理，是处理树状分层搜索的突破口；有一\"减\"，对应的有一\"加\"。\n",
-    "# if ineq_idx != 0:\n",
-    "#     V_upper = model.addConstrs((V_re[i]**2 + V_im[i]**2 == V_uu**2 for i in range(ineq_idx,nb)), 'V upper bound')\n",
-    "#\n",
-    "V_lower = model.addConstrs((V_re[i]**2 + V_im[i]**2 >= V_ll**2 for i in range(1,nb)), 'V lower bound')\n",
+    "    # obtain the range of voltage; the range is from the setting\n",
+    "    V_range = 0.1\n",
+    "    V_ll,V_uu = 1.0-V_range, 1.0+V_range\n",
     "\n",
-    "# # Yf * W * Yf; the number is equal to that of the lines/branches\n",
-    "# Line_temp_c_1 = model.addConstr(G_yf@V_re - B_yf@V_im == Line_temp_1, 'Branch Con 1')\n",
-    "# Line_temp_c_2 = model.addConstr(G_yf @ V_im + B_yf @ V_re == Line_temp_2, 'Branch Con 2')\n",
-    "# Line_temp_c_3 = model.addConstr(G_yt@V_re - B_yt@V_im == Line_temp_3, 'Branch Con 3')\n",
-    "# Line_temp_c_4 = model.addConstr(G_yt @ V_im + B_yt @ V_re == Line_temp_4, 'Branch Con 4')\n",
-    "# # 下式左侧是否应该乘上baseMVA\n",
-    "# Line_c_1 = model.addConstrs((Line_temp_1[i]**2 + Line_temp_2[i]**2 <= np.real(flow_max[i]) for i in range(nl)), 'Branch Con 1') # p.u.\n",
-    "# Line_c_2 = model.addConstrs((Line_temp_3[i]**2 + Line_temp_4[i]**2 <= np.real(flow_max[i]) for i in range(nl)), 'Branch Con 2') # p.u.\n",
+    "    # obtain the power range\n",
+    "    # Pg_lower, Pg_upper = ll[vv[\"i1\"][\"Pg\"]:vv[\"iN\"][\"Pg\"]], uu[vv[\"i1\"][\"Pg\"]:vv[\"iN\"][\"Pg\"]]*baseMVA\n",
+    "    # Qg_lower, Qg_upper = ll[vv[\"i1\"][\"Qg\"]:vv[\"iN\"][\"Qg\"]], uu[vv[\"i1\"][\"Qg\"]:vv[\"iN\"][\"Qg\"]]*baseMVA\n",
     "\n",
-    "# set the objective of the model\n",
-    "print('ipol:', ipol)\n",
-    "# The \"gencost\" changes with different cases. Keep in Mind!\n",
-    "# model.setObjective(gencost[ipol, First_Or_Con]@Pg**2+gencost[ipol, First_Or_Con+1]@Pg, GRB.MINIMIZE)\n",
-    "model.setObjective(np.array([1, 1.5])@Pg, GRB.MINIMIZE)\n",
+    "    # the dimension of the OPF\n",
+    "    # nb = bus.shape[0]          ## number of buses\n",
+    "    # nl = branch.shape[0]       ## number of branches\n",
     "\n",
-    "# calculate the optimization\n",
-    "model.optimize()\n",
+    "    # ineq_idx = 0\n",
     "\n",
-    "Pg_star, Qg_star = Pg.X, Qg.X\n",
-    "optimized_obj = np.array([1, 1.5])@Pg_star\n",
+    "    # create the model; set the model type: NonConvex.\n",
+    "    model = gp.Model(\"PowerGeneration\");model.setParam('NonConvex', 2)\n",
     "\n",
-    "print(f'Pg: {Pg_star}; Qg: {Qg_star}; opt obj: {optimized_obj}')"
+    "    # creat variables for the model; the numbers in the following codes should be replaced by parameters\n",
+    "    V_re = model.addMVar(3, lb=[-1.05,-1.05,-1.05], ub=[1.05,1.05,1.05], vtype=GRB.CONTINUOUS, name='V real')\n",
+    "    V_im = model.addMVar(3, lb=[-1.05,-1.05,-1.05],ub=[1.05,1.05,1.05], vtype=GRB.CONTINUOUS, name='V imag')\n",
+    "    Pg = model.addMVar(2, lb=0, ub=[105,105], vtype=GRB.CONTINUOUS, name='Pg')\n",
+    "    Qg = model.addMVar(2, lb=[0,0], ub=[105,105], vtype=GRB.CONTINUOUS, name='Qg')\n",
+    "    temp1 = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Temp 1')\n",
+    "    temp2 = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Temp 2')\n",
+    "    Pg_net = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Pg net')  # the number of buses, too\n",
+    "    Qg_net = model.addMVar(3, lb=lb_update, vtype=GRB.CONTINUOUS, name='Qg net')\n",
+    "\n",
+    "    # Line_temp_1 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 1')    # the shape should be line number\n",
+    "    # Line_temp_2 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 2')    # the shape should be line number\n",
+    "    # Line_temp_3 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 3')    # the shape should be line number\n",
+    "    # Line_temp_4 = model.addMVar(2, lb=lb_update, vtype=GRB.CONTINUOUS, name='Line temp 4')    # the shape should be line number\n",
+    "\n",
+    "    # the prameters of branches\n",
+    "    G = np.real(Ybus)\n",
+    "    B = np.imag(Ybus)\n",
+    "\n",
+    "\n",
+    "    # Constraints; insert the formulas\n",
+    "    Temp_c1 = model.addConstr(G@V_re - B@V_im == temp1, 'Temp Constr 1')\n",
+    "    Temp_c2 = model.addConstr(G @ V_im + B @ V_re == temp2, 'Temp Constr 2')\n",
+    "    Pg_net_c = model.addConstr(Cg @ Pg - Pd == Pg_net, 'Pg net Constr')\n",
+    "    Qg_net_c = model.addConstr(Cg @ Qg - Qd == Qg_net, 'Qg net Constr')\n",
+    "    # print(f'Pd:{Pd}\\n Qd:{Qd}')\n",
+    "    CVL_CPL = model.addConstrs((V_re[i] * temp1[i] *baseMVA+ V_im[i] * temp2[i]*baseMVA == Pg_net[i]  for i in range(nb)), 'Cvl P')  # break into different parts\n",
+    "    CVL_CPL_Q = model.addConstrs((V_im[i] * temp1[i] *baseMVA - V_re[i] * temp2[i]*baseMVA == Qg_net[i] for i in range(nb)), 'Cvl Q')\n",
+    "\n",
+    "    # the constraints of voltages on all buses; set the constraint for slack bus, then give the upper and lower constraints for other buses\n",
+    "\n",
+    "    # the upper&lower constraints for buses except for the slack bus\n",
+    "    V_upper = model.addConstrs((V_re[i]**2 + V_im[i]**2 <= V_uu**2 for i in range(1,nb-ineq_idx)), 'V upper bound')  # 对 range 起始值的处理，是处理树状分层搜索的突破口；有一\"减\"，对应的有一\"加\"。\n",
+    "    # if ineq_idx != 0:\n",
+    "    #     V_upper = model.addConstrs((V_re[i]**2 + V_im[i]**2 == V_uu**2 for i in range(ineq_idx,nb)), 'V upper bound')\n",
+    "    #\n",
+    "    V_lower = model.addConstrs((V_re[i]**2 + V_im[i]**2 >= V_ll**2 for i in range(1,nb)), 'V lower bound')\n",
+    "\n",
+    "    # # Yf * W * Yf; the number is equal to that of the lines/branches\n",
+    "    # Line_temp_c_1 = model.addConstr(G_yf@V_re - B_yf@V_im == Line_temp_1, 'Branch Con 1')\n",
+    "    # Line_temp_c_2 = model.addConstr(G_yf @ V_im + B_yf @ V_re == Line_temp_2, 'Branch Con 2')\n",
+    "    # Line_temp_c_3 = model.addConstr(G_yt@V_re - B_yt@V_im == Line_temp_3, 'Branch Con 3')\n",
+    "    # Line_temp_c_4 = model.addConstr(G_yt @ V_im + B_yt @ V_re == Line_temp_4, 'Branch Con 4')\n",
+    "    # # 下式左侧是否应该乘上baseMVA\n",
+    "    # Line_c_1 = model.addConstrs((Line_temp_1[i]**2 + Line_temp_2[i]**2 <= np.real(flow_max[i]) for i in range(nl)), 'Branch Con 1') # p.u.\n",
+    "    # Line_c_2 = model.addConstrs((Line_temp_3[i]**2 + Line_temp_4[i]**2 <= np.real(flow_max[i]) for i in range(nl)), 'Branch Con 2') # p.u.\n",
+    "\n",
+    "    # set the objective of the model\n",
+    "    print('ipol:', ipol)\n",
+    "    # The \"gencost\" changes with different cases. Keep in Mind!\n",
+    "    # model.setObjective(gencost[ipol, First_Or_Con]@Pg**2+gencost[ipol, First_Or_Con+1]@Pg, GRB.MINIMIZE)\n",
+    "    model.setObjective(np.array([1, 1.5])@Pg, GRB.MINIMIZE)\n",
+    "\n",
+    "    # calculate the optimization\n",
+    "    model.optimize()\n",
+    "\n",
+    "    Pg_star, Qg_star = Pg.X, Qg.X\n",
+    "    optimized_obj = np.array([1, 1.5])@Pg_star\n",
+    "\n",
+    "    print(f'Pg: {Pg_star}; Qg: {Qg_star}; opt obj: {optimized_obj}')\n",
+    "\n",
+    "optimize_OPF(p_load=30)"
    ],
    "metadata": {
     "collapsed": false
@@ -1001,7 +1002,12 @@
     }
    ],
    "source": [
-    "Pg_star"
+    "i = 0\n",
+    "for p in range(50):\n",
+    "    i+=1\n",
+    "    p_load = p*0.0005\n",
+    "    print(f'is: {i}')\n",
+    "    optimize_OPF(p_load)"
    ],
    "metadata": {
     "collapsed": false
