--- a/notebooks/auto_modeling_3bus.ipynb
+++ b/notebooks/auto_modeling_3bus.ipynb
@@ -1296,8 +1296,9 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.plot(Pg_np[:,0])\n",
-    "plt.plot(Pg_np[:,1])\n",
+    "x= np.arange(30,95)\n",
+    "plt.plot(x, Pg_np[:,0])\n",
+    "plt.plot(x, Pg_np[:,1])\n",
     "plt.ylabel('some numbers')\n",
     "plt.show()"
    ],
